tests/fixtures/invalid/pow_str_set_int.py
# Cannot call pow() with Str, Set[int], Int
x = pow("hello", {1, 2, 3}, 1)
